tests/snapshots/snapshots__pipeline@field_projection_shadow.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/field_projection_shadow.pr
---
== tokens ==
VOpen Type UIdent("Shape") Eq UIdent("Circle") LBrace Ident("radius") Colon KwInt RBrace Bar UIdent("Square") LBrace Ident("side") Colon KwInt RBrace VSemi Fn Ident("radius") LParen Ident("_shape") Colon UIdent("Shape") RParen Colon KwInt Eq Int(IntLit { value: 99, suffix: None }) VSemi Fn Ident("read") LParen Ident("shape") Colon UIdent("Shape") RParen Colon KwInt Eq Ident("shape") Dot Ident("radius") VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 0, suffix: None }) RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Shape",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Circle",
                    args: [
                        Int,
                    ],
                    fields: Some(
                        [
                            (
                                "radius",
                                Int,
                            ),
                        ],
                    ),
                    span: 166..172,
                },
                Ctor {
                    name: "Square",
                    args: [
                        Int,
                    ],
                    fields: Some(
                        [
                            (
                                "side",
                                Int,
                            ),
                        ],
                    ),
                    span: 191..197,
                },
            ],
            deriving: [],
            newtype: false,
            span: 153..211,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "radius",
            params: [
                Param {
                    name: "_shape",
                    ty: Some(
                        Con(
                            "Shape",
                            [],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 99,
                        suffix: None,
                    },
                ),
                span: 247..249,
            },
            wheres: [],
            span: 213..249,
        },
        Decl {
            name: "read",
            params: [
                Param {
                    name: "shape",
                    ty: Some(
                        Con(
                            "Shape",
                            [],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: FieldAccess(
                    Spanned {
                        node: Var(
                            "shape",
                        ),
                        span: 282..287,
                    },
                    "radius",
                ),
                span: 282..294,
            },
            wheres: [],
            span: 251..294,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 308..315,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 0,
                                    suffix: None,
                                },
                            ),
                            span: 316..317,
                        },
                    ],
                ),
                span: 308..318,
            },
            wheres: [],
            span: 296..318,
        },
    ],
}

== types ==
[E1023] Type Error: in `read`: field `radius` cannot be projected from unrefined sum type `Shape` with 2 constructors; match a constructor first
   ╭─[ <source>:7:32 ]
   │
 7 │ fn read(shape : Shape) : Int = shape.radius
   │                                ──────┬─────  
   │                                      ╰─────── in `read`: field `radius` cannot be projected from unrefined sum type `Shape` with 2 constructors; match a constructor first
───╯
