tests/snapshots/snapshots__pipeline@fip_budget.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/fip_budget.pr
---
== tokens ==
VOpen Type UIdent("Box") Eq UIdent("Box") LParen KwInt RParen VSemi Type UIdent("Pair") Eq UIdent("Pair") LParen UIdent("Box") Comma UIdent("Box") RParen VSemi Fip LParen Int(IntLit { value: 1, suffix: None }) RParen Fn Ident("box") LParen Ident("x") RParen Eq UIdent("Box") LParen Ident("x") RParen VSemi Fip LParen Int(IntLit { value: 3, suffix: None }) RParen Fn Ident("pair") LParen Ident("x") Comma Ident("y") RParen Eq UIdent("Pair") LParen Ident("box") LParen Ident("x") RParen Comma Ident("box") LParen Ident("y") RParen RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Box",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Box",
                    args: [
                        Int,
                    ],
                    fields: None,
                    span: 388..391,
                },
            ],
            deriving: [],
            newtype: false,
            span: 377..396,
        },
        DataDecl {
            name: "Pair",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Pair",
                    args: [
                        Con(
                            "Box",
                            [],
                        ),
                        Con(
                            "Box",
                            [],
                        ),
                    ],
                    fields: None,
                    span: 410..414,
                },
            ],
            deriving: [],
            newtype: false,
            span: 398..424,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "box",
            params: [
                Param {
                    name: "x",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "Box",
                        ),
                        span: 445..448,
                    },
                    [
                        Spanned {
                            node: Var(
                                "x",
                            ),
                            span: 449..450,
                        },
                    ],
                ),
                span: 445..451,
            },
            wheres: [],
            fip: Fip(
                1,
            ),
            span: 426..451,
        },
        Decl {
            name: "pair",
            params: [
                Param {
                    name: "x",
                    ty: None,
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "y",
                    ty: None,
                    borrow: false,
                    default: None,
                },
            ],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "Pair",
                        ),
                        span: 476..480,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "box",
                                    ),
                                    span: 481..484,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "x",
                                        ),
                                        span: 485..486,
                                    },
                                ],
                            ),
                            span: 481..487,
                        },
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "box",
                                    ),
                                    span: 489..492,
                                },
                                [
                                    Spanned {
                                        node: Var(
                                            "y",
                                        ),
                                        span: 493..494,
                                    },
                                ],
                            ),
                            span: 489..495,
                        },
                    ],
                ),
                span: 476..496,
            },
            wheres: [],
            fip: Fip(
                3,
            ),
            span: 453..496,
        },
    ],
}

== types ==
box : (Int) -> Box
pair : (Int, Int) -> Pair

== core (cbpv) ==
fn box(x) =
  return x to t@0
  return Box(t@0)
fn pair(x, y) =
  return x to t@1
  box(t@1) to t@2
  return y to t@3
  box(t@3) to t@4
  return Pair(t@2, t@4)

== fbip (rc) ==
fn box(x) =
  return x to t@0
  return Box(t@0)
fn pair(x, y) =
  return x to t@1
  box(t@1) to t@2
  return y to t@3
  box(t@3) to t@4
  return Pair(t@2, t@4)

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [796 x i8] c"scheme  prism-core-hash-v2\0Abundle  8a4492246c5a3213929abfcdd269a834c1be29b5e9606b5a52fe5cbd485759bd\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:8a4492246c5a3213929abfcdd269a834c1be29b5e9606b5a52fe5cbd485759bd\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_box  6ec7fbdcd7a1b742c6b1a903ab2b2409a1dcb3efee198885aec33ddefad43175  box\0Afn      prismfn_pair  198abb8280af13116383bb6cff7360e171a594e608b7f20e2e09470f018fed77  pair\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [927 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  8a4492246c5a3213929abfcdd269a834c1be29b5e9606b5a52fe5cbd485759bd\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:8a4492246c5a3213929abfcdd269a834c1be29b5e9606b5a52fe5cbd485759bd\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_box 6ec7fbdcd7a1b742c6b1a903ab2b2409a1dcb3efee198885aec33ddefad43175 box arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_pair 198abb8280af13116383bb6cff7360e171a594e608b7f20e2e09470f018fed77 pair arity 2 slots abi-word[arg0=%a0:word,arg1=%a1:word]\0A\00", section ",.prism_kont", align 1
@llvm.used = appending global [2 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map], section ",llvm.metadata"

== run ==
error: no main function
